Actualizando version de primefaces en vortal

--- a/cetus-vortal-war/WebContent/pages/admin_portal/application/dialog.xhtml
+++ b/cetus-vortal-war/WebContent/pages/admin_portal/application/dialog.xhtml
@@ -14,8 +14,8 @@
 			severity="alert" widgetVar="confirmDialogDelete">
 			<center>
 				<p:commandButton id="confirm" value="#{msg.accept}" update=":formContenido:men :formContenido:list"
-					oncomplete="confirmDialogDelete.hide()" process="@this" action="#{applicationManagedBean.delete}" />
-				<p:commandButton id="decline" value="#{msg.cancel}" onclick="confirmDialogDelete.hide()" type="button" />
+					oncomplete="PF('confirmDialogDelete').hide()" process="@this" action="#{applicationManagedBean.delete}" />
+				<p:commandButton id="decline" value="#{msg.cancel}" onclick="PF('confirmDialogDelete').hide()" type="button" />
 			</center>
 		</p:confirmDialog>
 	</h:form>
@@ -24,5 +24,16 @@
 		resizable="false" showEffect="clip" hideEffect="fold">
 		<ui:include src="#{msg.url_app_add}" />
 	</p:dialog>
+  
+      <p:confirmDialog id="confirmDialog" message="#{msg.confirm_operation}" appendToBody="true" header="#{msg.add}"
+      severity="alert" widgetVar="confirmation">
+      <center>
+        <p:commandButton id="confirmRol" value="#{msg.accept}"
+          update=":formContenido:men :formContenido:list :dialog :formConfirm :dialogAdd grid msgAdd"
+          oncomplete="PF('confirmation').hide(); handleAddRow(xhr, status, args)" actionListener="#{applicationManagedBean.add}"
+          process="@this" />
+        <p:commandButton id="declineRol" value="#{msg.cancel}" onclick="PF('confirmation').hide();" type="button" />
+      </center>
+    </p:confirmDialog>
 
 </ui:composition>
