--- a/cetus-vortal-war/WebContent/pages/admin_portal/application/ini.xhtml
+++ b/cetus-vortal-war/WebContent/pages/admin_portal/application/ini.xhtml
@@ -12,19 +12,20 @@
 					times : 4
 				}, 10);
 			} else {
-				confirmation.show();
+				PF('confirmation').show();
 			}
 		}
 		
 		function handleAddRow(xhr, status, args) {
 			if (args.lSuccessfull) {
-				add.hide();
+				//add.hide();
+                PF('add').hide()
 			}
 		}
 	</h:outputScript>
 </h:head>
 <h:body>
-	<p:ajaxStatus onstart="statusDialog.show();" onsuccess="statusDialog.hide();" />
+	<p:ajaxStatus onstart="PF('statusDialog').show();" onsuccess="PF('statusDialog').hide();" />
 	<p:dialog modal="true" widgetVar="statusDialog" header="#{msg.loading}" draggable="false" closable="false">
 		<p:graphicImage value="#{msg.url_loading}" />
 	</p:dialog>
