--- a/cetus-vortal-war/WebContent/pages/admin_portal/menu/update.xhtml
+++ b/cetus-vortal-war/WebContent/pages/admin_portal/menu/update.xhtml
@@ -10,7 +10,7 @@
 					times : 4
 				}, 10);
 			} else {
-				confirmDialogUpdate.show();
+				PF('confirmDialogUpdate').show();
 			}
 		}
 </h:outputScript>
