--- a/cetus-vortal-war/WebContent/pages/admin_portal/parameter/list.xhtml
+++ b/cetus-vortal-war/WebContent/pages/admin_portal/parameter/list.xhtml
@@ -4,7 +4,7 @@
 	<f:loadBundle var="msg" basename="Message_es" />
 
 	<p:contextMenu for="list">
-		<p:menuitem value="#{msg.view}" update=":formContenido:men :dialog" icon="ui-icon-search" oncomplete="viewDialog.show()"
+		<p:menuitem value="#{msg.view}" update=":formContenido:men :dialog" icon="ui-icon-search" oncomplete="PF('viewDialog').show()"
 			action="#{parameterManagedBean.loadSelected}" />
 	</p:contextMenu>
 
@@ -42,7 +42,7 @@
 		</p:column>
 
 		<f:facet name="footer">
-			<p:commandButton id="addButton" value="#{msg.add}" icon="ui-icon-circle-plus" oncomplete="add.show()"
+			<p:commandButton id="addButton" value="#{msg.add}" icon="ui-icon-circle-plus" oncomplete="PF('add').show()"
 				update=":formAdd:grid" />
 
 			<p:commandButton id="updateButton" icon="ui-icon-pencil" title="#{msg.update}" process="@form" update=":dialogUpdate"
