--- a/cetus-vortal-war/WebContent/pages/admin_portal/parameter/update.xhtml
+++ b/cetus-vortal-war/WebContent/pages/admin_portal/parameter/update.xhtml
@@ -11,7 +11,7 @@
 					times : 4
 				}, 10);
 			} else {
-				confirmDialogUpdate.show();
+				PF('confirmDialogUpdate').show();
 			}
 		}
 	</h:outputScript>
