--- a/cetus-vortal-war/WebContent/pages/admin_portal/user/ini.xhtml
+++ b/cetus-vortal-war/WebContent/pages/admin_portal/user/ini.xhtml
@@ -13,7 +13,7 @@ function handleAddRow(xhr, status, args) {
 			times : 4
 		}, 10);
 	} else {
-		add.hide();
+		PF('add').hide();
 	}
 }
 
@@ -21,7 +21,7 @@ function handleAddRow(xhr, status, args) {
 	</h:outputScript>
 </h:head>
 <h:body>
-	<p:ajaxStatus onstart="statusDialog.show();" onsuccess="statusDialog.hide();" />
+	<p:ajaxStatus onstart="PF('statusDialog').show();" onsuccess="PF('statusDialog').hide();" />
 	<p:dialog modal="true" widgetVar="statusDialog" header="#{msg.loading}" draggable="false" closable="false">
 		<p:graphicImage value="#{msg.url_loading}" />
 	</p:dialog>
