--- a/cetus-vortal-war/WebContent/pages/admin_portal/user/list.xhtml
+++ b/cetus-vortal-war/WebContent/pages/admin_portal/user/list.xhtml
@@ -5,8 +5,8 @@
 
 
 	<p:contextMenu for="list">
-		<p:menuitem value="#{msg.view}" update=":dialog" icon="ui-icon-search" oncomplete="carDialog.show()" />
-		<p:menuitem value="#{msg.delete}" update="list" icon="ui-icon-close" oncomplete="confirmDialogDelete.show()" />
+		<p:menuitem value="#{msg.view}" update=":dialog" icon="ui-icon-search" oncomplete="PF('carDialog').show()" />
+		<p:menuitem value="#{msg.delete}" update="list" icon="ui-icon-close" oncomplete="PF('confirmDialogDelete').show()" />
 	</p:contextMenu>
 
 	<p:dataTable var="object" paginator="true" rows="10" id="list"
@@ -132,13 +132,13 @@
 			</p:cellEditor>
 		</p:column>
 
-		<p:column headerText="Options" style="width:50px">
+		<p:column headerText="#{msg.update}" style="width:60px">
 			<p:rowEditor />
 		</p:column>
 
 		<f:facet name="footer">
 			<p:commandButton id="addButton" value="#{msg.add}" update=":formAdd_user" icon="ui-icon-circle-plus"
-				oncomplete="add.show()" />
+				oncomplete="PF('add').show()" />
 		</f:facet>
 	</p:dataTable>
 </ui:composition>
