--- a/cetus-vortal-war/WebContent/pages/admin_portal/application/add.xhtml
+++ b/cetus-vortal-war/WebContent/pages/admin_portal/application/add.xhtml
@@ -63,22 +63,13 @@
 			<f:facet name="footer">
 				<center>
 					<p:commandButton async="true" id="submitButton2" value="#{msg.accept}"
-						oncomplete="handleDialogAdd(xhr, status, args)" binding="#{applicationManagedBean.btnSave}" process="@form"
+						oncomplete="PF('confirmation').show();" binding="#{applicationManagedBean.btnSave}" process="@form"
 						action="#{applicationManagedBean.loadData}" icon="ui-icon-disk" update=":formContenido:men grid" />
 				</center>
 			</f:facet>
 		</h:panelGrid>
 
-		<p:confirmDialog id="confirmDialog" message="#{msg.confirm_operation}" appendToBody="true" header="#{msg.add}"
-			severity="alert" widgetVar="confirmation">
-			<center>
-				<p:commandButton id="confirmRol" value="#{msg.accept}"
-					update=":formContenido:men :formContenido:list :dialog :formConfirm :dialogAdd grid msgAdd"
-					oncomplete="confirmation.hide(); handleAddRow(xhr, status, args)" actionListener="#{applicationManagedBean.add}"
-					process="@this" />
-				<p:commandButton id="declineRol" value="#{msg.cancel}" onclick="confirmation.hide();" type="button" />
-			</center>
-		</p:confirmDialog>
+
 
 
 	</h:form>
