--- a/cetus-vortal-war/WebContent/pages/admin_portal/application/list.xhtml
+++ b/cetus-vortal-war/WebContent/pages/admin_portal/application/list.xhtml
@@ -5,9 +5,9 @@
 
 	<p:contextMenu for="list">
 		<p:menuitem value="#{msg.view}" update=":formContenido:men :dialog" icon="ui-icon-search"
-			oncomplete="viewDialog.show()" action="#{applicationManagedBean.loadSelected}" />
+			oncomplete="PF('viewDialog').show()" action="#{applicationManagedBean.loadSelected}" />
 		<p:menuitem value="#{msg.delete}" update="list :formContenido:men" icon="ui-icon-close"
-			oncomplete="confirmDialogDelete.show()" action="#{applicationManagedBean.loadSelected}" />
+			oncomplete="PF('confirmDialogDelete').show()" action="#{applicationManagedBean.loadSelected}" />
 	</p:contextMenu>
 
 	<p:dataTable id="list" var="object" paginator="true" rows="5"
@@ -120,13 +120,13 @@
 					<h:outputText value="#{object.logo != null ? 'SI' : 'NO'}" />
 				</f:facet>
 				<f:facet name="input">
-					<p:commandButton value="..." onclick="dialogFileUpload.show();" />
+					<p:commandButton value="..." onclick="PF('dialogFileUpload').show();" />
 					<p:dialog widgetVar="dialogFileUpload" id="dialogFileUpload" appendToBody="true" modal="true" height="100"
 						width="300" maximizable="false" header="#{msg.select_logo}" resizable="false">
 						<h:form enctype="multipart/form-data">
 							<p:fileUpload id="logo" fileUploadListener="#{applicationManagedBean.handleFileUpload}" auto="true"
 								allowTypes="/(\.|\/)(png)$/" sizeLimit="100000" invalidFileMessage="#{msg.invalidFileMessage}"
-								invalidSizeMessage="#{msg.invalidSizeMessage}" label="#{msg.choose}" oncomplete="dialogFileUpload.hide();" />
+								invalidSizeMessage="#{msg.invalidSizeMessage}" label="#{msg.choose}" oncomplete="PF('dialogFileUpload').hide();" />
 						</h:form>
 					</p:dialog>
 				</f:facet>
@@ -142,13 +142,13 @@
 					<h:outputText value="#{object.imagenCuerpo != null ? 'SI' : 'NO'}" />
 				</f:facet>
 				<f:facet name="input">
-					<p:commandButton value="..." onclick="dialogFileUploadImage.show();" />
+					<p:commandButton value="..." onclick="PF('dialogFileUploadImage').show();" />
 					<p:dialog widgetVar="dialogFileUploadImage" id="dialogFileUploadImage" appendToBody="true" modal="true"
 						height="100" width="300" maximizable="false" header="#{msg.select_image}" resizable="false">
 						<h:form enctype="multipart/form-data">
 							<p:fileUpload id="image" fileUploadListener="#{applicationManagedBean.handleFileUploadImageBody}" auto="true"
 								allowTypes="/(\.|\/)(jpe?g|png)$/" sizeLimit="1000000" invalidFileMessage="#{msg.invalidFileMessage}"
-								invalidSizeMessage="#{msg.invalidSizeMessage}" label="#{msg.choose}" oncomplete="dialogFileUploadImage.hide();" />
+								invalidSizeMessage="#{msg.invalidSizeMessage}" label="#{msg.choose}" oncomplete="PF('dialogFileUploadImage').hide();" />
 						</h:form>
 					</p:dialog>
 				</f:facet>
@@ -157,12 +157,12 @@
 
 
 
-		<p:column headerText="#{msg.update}" style="width:50px">
+		<p:column headerText="#{msg.update}" style="width:60px">
 			<p:rowEditor />
 		</p:column>
 
 		<f:facet name="footer">
-			<p:commandButton id="addButton" value="#{msg.add}" icon="ui-icon-circle-plus" oncomplete="add.show()"
+			<p:commandButton id="addButton" value="#{msg.add}" icon="ui-icon-circle-plus" oncomplete="PF('add').show()"
 				update=":formAdd:grid" />
 		</f:facet>
 
