--- a/cetus-vortal-war/WebContent/pages/admin_portal/general_search/dialog.xhtml
+++ b/cetus-vortal-war/WebContent/pages/admin_portal/general_search/dialog.xhtml
@@ -13,8 +13,8 @@
       header="#{msg.delete_register}" severity="alert" widgetVar="confirmDialogDelete">
       <center>
         <p:commandButton id="confirm" value="#{msg.accept}" update=":formContenido:men :formContenido:list"
-          oncomplete="confirmDialogDelete.hide()" process="@this" action="#{generalSearchMBean.delete}" />
-        <p:commandButton id="decline" value="#{msg.cancel}" onclick="confirmDialogDelete.hide()" type="button" />
+          oncomplete="PF('confirmDialogDelete').hide()" process="@this" action="#{generalSearchMBean.delete}" />
+        <p:commandButton id="decline" value="#{msg.cancel}" onclick="PF('confirmDialogDelete').hide()" type="button" />
       </center>
     </p:confirmDialog>
   </h:form>
@@ -31,9 +31,9 @@
       severity="alert" widgetVar="confirmation" visible="#{generalSearchMBean.showConfirmAdd}">
       <center>
         <p:commandButton id="confirmAdd" value="#{msg.accept}"
-          update=":formContenido:men :formContenido:list :formAdd:grid" oncomplete="confirmation.hide(); add.hide();"
+          update=":formContenido:men :formContenido:list :formAdd:grid" oncomplete="PF('confirmation').hide(); PF('add').hide();"
           actionListener="#{generalSearchMBean.add}" process="@this" />
-        <p:commandButton id="declineRol" value="#{msg.cancel}" onclick="confirmation.hide();" type="button" />
+        <p:commandButton id="declineRol" value="#{msg.cancel}" onclick="PF('confirmation').hide();" type="button" />
       </center>
     </p:confirmDialog>
   </h:form>
@@ -48,9 +48,9 @@
       severity="alert" widgetVar="confirmationUpd" visible="#{generalSearchMBean.showConfirmUpd}">
       <center>
         <p:commandButton id="confirmUpd" value="#{msg.accept}"
-          update=":formContenido:men :formContenido:list" oncomplete="confirmationUpd.hide(); update.hide();"
+          update=":formContenido:men :formContenido:list" oncomplete="PF('confirmationUpd').hide(); PF('update').hide();"
           actionListener="#{generalSearchMBean.update}" process="@this" />
-        <p:commandButton id="cancelUpd" value="#{msg.cancel}" onclick="confirmationUpd.hide()" type="button" />
+        <p:commandButton id="cancelUpd" value="#{msg.cancel}" onclick="PF('confirmationUpd').hide()" type="button" />
       </center>
     </p:confirmDialog>
   </h:form>
