--- a/cetus-vortal-war/WebContent/pages/admin_portal/user_ws/add.xhtml
+++ b/cetus-vortal-war/WebContent/pages/admin_portal/user_ws/add.xhtml
@@ -34,9 +34,9 @@
 			<center>
 				<p:commandButton id="confirmRol" value="#{msg.accept}"
 					update=":formContenido:men :formContenido:list :dialog :formConfirm :dialogAdd grid msgAdd"
-					oncomplete="confirmation.hide(); handleAddRow(xhr, status, args)" actionListener="#{userWSManagedBean.add}"
+					oncomplete="PF('confirmation').hide(); handleAddRow(xhr, status, args)" actionListener="#{userWSManagedBean.add}"
 					process="@this" />
-				<p:commandButton id="declineRol" value="#{msg.cancel}" onclick="confirmation.hide();" type="button" />
+				<p:commandButton id="declineRol" value="#{msg.cancel}" onclick="PF('confirmation').hide();" type="button" />
 			</center>
 		</p:confirmDialog>
 
