--- a/cetus-vortal-war/WebContent/pages/admin_portal/user_ws/list.xhtml
+++ b/cetus-vortal-war/WebContent/pages/admin_portal/user_ws/list.xhtml
@@ -4,10 +4,10 @@
 	<f:loadBundle var="msg" basename="Message_es" />
 
 	<p:contextMenu for="list">
-		<p:menuitem value="#{msg.view}" update=":formContenido:men :dialog" icon="ui-icon-search" oncomplete="viewDialog.show()"
+		<p:menuitem value="#{msg.view}" update=":formContenido:men :dialog" icon="ui-icon-search" oncomplete="PF('viewDialog').show()"
 			action="#{userWSManagedBean.loadSelected}" />
 		<p:menuitem value="#{msg.delete}" update="list :formContenido:men" icon="ui-icon-close"
-			oncomplete="confirmDialogDelete.show()" action="#{userWSManagedBean.loadSelected}" />
+			oncomplete="PF('confirmDialogDelete').show()" action="#{userWSManagedBean.loadSelected}" />
 	</p:contextMenu>
 
 	<p:dataTable id="list" var="object" paginator="true" rows="5" rowStyleClass="#{index mod 2 == 0 ? null : 'row-color-2'}"
@@ -23,7 +23,7 @@
 			<h:outputLabel value="#{msg.list_register}" />
 		</f:facet>
 
-		<p:column sortBy="#{object.user}" filterBy="#{object.user}" filterMatchMode="contains">
+		<p:column width="20%" sortBy="#{object.user}" filterBy="#{object.user}" filterMatchMode="contains">
 			<f:facet name="header">
 				<h:outputText value="#{msg.user}" />
 			</f:facet>
@@ -37,7 +37,7 @@
 			</p:cellEditor>
 		</p:column>
 
-		<p:column sortBy="#{object.password}" filterBy="#{object.password}" filterMatchMode="contains">
+		<p:column width="20%" sortBy="#{object.password}" filterBy="#{object.password}" filterMatchMode="contains">
 			<f:facet name="header">
 				<h:outputText value="#{msg.password}" />
 			</f:facet>
@@ -51,7 +51,7 @@
 			</p:cellEditor>
 		</p:column>
 
-		<p:column sortBy="#{object.description}" filterBy="#{object.description}" filterMatchMode="contains">
+		<p:column width="35%" sortBy="#{object.description}" filterBy="#{object.description}" filterMatchMode="contains">
 			<f:facet name="header">
 				<h:outputText value="#{msg.description}" />
 			</f:facet>
@@ -65,7 +65,7 @@
 			</p:cellEditor>
 		</p:column>
 
-		<p:column sortBy="#{object.status}" filterBy="#{object.status}" filterMatchMode="contains">
+		<p:column width="15%" sortBy="#{object.status}" filterBy="#{object.status}" filterMatchMode="contains">
 			<f:facet name="header">
 				<h:outputText value="#{msg.status}" />
 			</f:facet>
@@ -87,12 +87,12 @@
 			</p:cellEditor>
 		</p:column>
 
-		<p:column headerText="#{msg.update}" style="width:50px">
+		<p:column width="10%" headerText="#{msg.update}">
 			<p:rowEditor />
 		</p:column>
 
 		<f:facet name="footer">
-			<p:commandButton id="addButton" value="#{msg.add}" icon="ui-icon-circle-plus" oncomplete="add.show()"
+			<p:commandButton id="addButton" value="#{msg.add}" icon="ui-icon-circle-plus" oncomplete="PF('add').show()"
 				update=":formAdd:grid" />
 		</f:facet>
 
